--- a/config/airflow.cfg
+++ b/config/airflow.cfg
@@ -419,7 +419,7 @@ smtp_host = smtp.gmail.com
 smtp_starttls = True
 smtp_ssl = False
 smtp_user = neskolins66613@gmail.com               
-smtp_password =  hgnrqwaxdgdizmui
+smtp_password =  password
 smtp_port = 587
 smtp_mail_from = neskolins66613@gmail.com
 
